# dbt-core

./: Cargo.toml  rust-toolchain.toml
.changes/unreleased/: Under the Hood-20260609-110656.yaml
.github/ISSUE_TEMPLATE/: bug-report-v2.yml  bug-report-vsce.yml  bug-report.yml  config.yml  feature-request.yml  regression-report.yml  sql-understanding.yml
.github/workflows/: auto-public-pr-copybara.yml  label-adapter.yml  publish-homebrew.yml  release-awaiting.yml  release-v2.yml
benchmark/: Dockerfile  README.md  generate_project.py  run_benchmark.py
crates/dbt-adapter/: Cargo.toml  deny.toml
crates/dbt-adapter/src/: connection.rs  lib.rs  sql_types.rs
crates/dbt-clap-core/src/: commands.rs  lib.rs
crates/dbt-common/: Cargo.toml
crates/dbt-common/src/: io_args.rs  mod.rs
crates/dbt-compilation/src/: core.rs  traits.rs
crates/dbt-daemon/: Cargo.toml  README.md
crates/dbt-daemon/src/: cache.rs  client.rs  main.rs  protocol.rs  server.rs  state.rs
crates/dbt-defer/: Cargo.toml
crates/dbt-defer/src/: lib.rs
crates/dbt-deps/src/: hub_client.rs
crates/dbt-error/: Cargo.toml
crates/dbt-error/src/: lib.rs  tracing.rs  types.rs
crates/dbt-features/: Cargo.toml
crates/dbt-features/src/: cli.rs  feature_stack_builder.rs  task_runner.rs
crates/dbt-frontend-common/: Cargo.toml
crates/dbt-frontend-common/src/: lib.rs  sources_extractor.rs
crates/dbt-init/src/: dbt_cloud_client.rs
crates/dbt-jinja-ctx/src/: run.rs
crates/dbt-jinja-utils/src/: listener.rs  node_resolver.rs  utils.rs
crates/dbt-loader/src/: loader.rs
crates/dbt-login/: Cargo.toml
crates/dbt-login/src/: execute.rs
crates/dbt-main/src/: compilation.rs  dbt_lib.rs  lib.rs  update.rs  vars.rs
crates/dbt-metricflow/src/: lib.rs
crates/dbt-parser/src/: args.rs  dbt_project_config.rs  renderer.rs  renderer_test.rs  resolver.rs  sql_file_info.rs  tests.rs
crates/dbt-sa-cli/src/: main.rs
crates/dbt-sa-cli/tests/: common.rs
crates/dbt-scheduler/src/: schedule.rs
crates/dbt-schemas/: Cargo.toml
crates/dbt-schemas/src/: dbt_types.rs  lib.rs  man.rs  state.rs
crates/dbt-state/: Cargo.toml
crates/dbt-state/src/: run_cache_defer.rs  service_client.rs  view_traversal.rs
crates/dbt-state/tests/: interactive_auth.rs  test.rs
crates/dbt-tasks-core/: Cargo.toml
crates/dbt-tasks-core/src/: context.rs  context_factory.rs  run_cache_lifecycle.rs  run_task_hooks.rs  span_manager.rs  task_runner_hooks.rs  task_spans.rs
crates/dbt-tasks-sa/: Cargo.toml
crates/dbt-tasks-sa/src/: compilation_pipeline.rs  compiled_sql_cache.rs  debug.rs  extract_sources.rs  lib.rs  materialize.rs  register_seeds.rs  run_operation.rs  sources_extractor.rs  task.rs  task_runner.rs  utils.rs  visitor.rs
crates/dbt-telemetry/: Cargo.toml
crates/dbt-telemetry/include/dbtlabs/proto/public/v1/events/fusion/invocation/: invocation.proto
crates/dbt-telemetry/src/: lib.rs
crates/dbt-telemetry/src/attributes/: context.rs  mod.rs  registry.rs
crates/dbt-telemetry/src/impls/: v1_public_events_fusion_compat.rs  v1_public_events_fusion_dev.rs  v1_public_events_fusion_log.rs
crates/dbt-telemetry/src/schemas/: mod.rs
crates/dbt-telemetry/src/schemas/log/: artifact.rs  connection.rs  list_item.rs  log_message.rs  show_data.rs  show_result.rs  state_mod_diff.rs
crates/dbt-telemetry/src/schemas/span/: artifact.rs  asset.rs  deps.rs  dev.rs  generic.rs  hook.rs  invocation.rs  node.rs  onboarding.rs  phase.rs  process.rs  query.rs  update.rs
crates/dbt-telemetry/src/serialize/: arrow.rs  mod.rs
crates/dbt-test-utils/: Cargo.toml
crates/dbt-tracing/: Cargo.toml
crates/dbt-tracing/src/: async_tracing.rs  background_writer.rs  constants.rs  convert.rs  data_provider.rs  debug_value.rs  emit.rs  error.rs  event_info.rs  filter.rs  init.rs  layer.rs  lib.rs  metrics.rs  reload.rs  rotating_file_writer.rs  shared.rs  shared_writer.rs  shutdown.rs  span_info.rs  static_name.rs  test_support.rs
crates/dbt-tracing/src/attributes/: context.rs  export.rs  mod.rs  traits.rs  wrapper.rs
crates/dbt-tracing/src/layers/: data_layer.rs  jsonl_writer.rs  mod.rs  otlp.rs  parquet_writer.rs  pretty_writer.rs
crates/dbt-tracing/src/schemas/: location.rs  mod.rs  otlp.rs  record.rs  severity.rs
crates/dbt-tracing/src/serialize/: arrow.rs  envelope.rs  mod.rs  otlp.rs  traits.rs
crates/dbt-tracing/src/tests/: data_provider_tests.rs  emit_tests.rs  filter_tests.rs  infra_tests.rs  layers_jsonl_tests.rs  layers_otlp_tests.rs  layers_parquet_tests.rs  layers_pretty_tests.rs  metrics_tests.rs  middleware_tests.rs  mocks.rs  mod.rs  span_info_tests.rs
crates/dbt-xdbc/: drivers.toml
crates/dbt-xdbc/src/: bigquery.rs  checksums.rs  lib.rs
crates/vortex-events/: Cargo.toml
(+156 files in other folders)
